changing styles and addtable of content

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,13 +12,13 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #454545;
+$text-color:       #36393E;
 $background-color: #FFF;
-$brand-color:      #00B2EE;
+$brand-color:      #4E8EF7;
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 30%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-light: #979EAA;
+$grey-color-dark:  #36393E;
 
 // Width of the content area
 $content-width:    700px;
