--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="http://bootcampwithus.usefedora.com/" target="_blank">Cursos</a>
     </nav>
 
     <h1>
