--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,3 @@
 <div class="footer" align="center">
 </div>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"e940b700cbe988699b03ab77c","lid":"e8641062ff"}) })</script>
