--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
           {% endif %}
         {% endfor %}
         <a class="page-link" href="http://bootcampwithus.usefedora.com/" target="_blank">Cursos</a>
+        <a class="page-link" href="http://j.mp/1Us5Y5B" target="_blank">Comprar</a>
     </nav>
 
     <h1>
