--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
 <div class="footer" align="center">
 </div>
+<script type="text/javascript">stLight.options({publisher: "e54bac27-2ea6-4037-8575-fac40983aed7", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script>
+var options={ "publisher": "e54bac27-2ea6-4037-8575-fac40983aed7", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter"]}};
+var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+</script>
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"e940b700cbe988699b03ab77c","lid":"e8641062ff"}) })</script>
