--- a/_sass/articles/_articles.scss
+++ b/_sass/articles/_articles.scss
@@ -15,6 +15,10 @@
     border-radius: 0px;
     font-family: $font-title-family;
   }
+  .tag{
+    background-color: #eee;
+    padding: 3px;
+  }
 }
 
 
