--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,47 +1,39 @@
 ---
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-     <h1 class="post-title">{{ page.title }}</h1>
-     <p class="post-meta">Posted on {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-  
-  {% if page.comments %}
-  <div align="center">
-    <div id="disqus_thread"></div>
-<script>
-/**
-* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-
-s.src = '//ionbook.disqus.com/embed.js';
-
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-   </div>
-   {% endif %}
-  <div align="center">
-  	<a href="#">
-  	<i class="fa fa-arrow-circle-up fa-2x"></i>
-  	</a>
+<div class="title-article">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+         <h1>{% if page.wrap_title %}{{ page.wrap_title }}{% else %}{{ page.title }}{% endif %}</h1>
+         <div class="info">
+            <p>
+              {% for tag in page.tags %}
+                <span class="tag">{{ tag }}</span>
+              {% endfor %}
+              - {{ page.date | date: '%B %d, %Y' }}
+            </p>
+          </div>
+      </div>
+    </div>
   </div>
+</div>
+<div class="container article-detail">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
+      <article class="post-content">
+        {{ content }}
+      </article>
+  
+      {% if page.comments %}{% include disqus.html %}{% endif %}
+   
+      <div align="center">
+        <a href="#">
+        <i class="fa fa-arrow-circle-up fa-2x"></i>
+        </a>
+      </div>
+
+    </div>
+  </div>
 </div>
