--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,74 +1,66 @@
-/* Syntax Highlighting
- * ============================================== */
-    .highlight {
-         .hll { background-color: #ffffcc }
-        .c { color: #8f5902; font-style: italic } /* Comment */
-        .err { color: #a40000; border: 1px solid #ef2929 } /* Error */
-        .g { color: #000000 } /* Generic */
-        .k { color: #204a87; font-weight: bold } /* Keyword */
-        .l { color: #000000 } /* Literal */
-        .n { color: #000000 } /* Name */
-        .o { color: #ce5c00; font-weight: bold } /* Operator */
-        .x { color: #000000 } /* Other */
-        .p { color: #000000; font-weight: bold } /* Punctuation */
-        .cm { color: #8f5902; font-style: italic } /* Comment.Multiline */
-        .cp { color: #8f5902; font-style: italic } /* Comment.Preproc */
-        .c1 { color: #8f5902; font-style: italic } /* Comment.Single */
-        .cs { color: #8f5902; font-style: italic } /* Comment.Special */
-        .gd { color: #a40000 } /* Generic.Deleted */
-        .ge { color: #000000; font-style: italic } /* Generic.Emph */
-        .gr { color: #ef2929 } /* Generic.Error */
-        .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-        .gi { color: #00A000 } /* Generic.Inserted */
-        .go { color: #000000; font-style: italic } /* Generic.Output */
-        .gp { color: #8f5902 } /* Generic.Prompt */
-        .gs { color: #000000; font-weight: bold } /* Generic.Strong */
-        .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-        .gt { color: #a40000; font-weight: bold } /* Generic.Traceback */
-        .kc { color: #204a87; font-weight: bold } /* Keyword.Constant */
-        .kd { color: #204a87; font-weight: bold } /* Keyword.Declaration */
-        .kn { color: #204a87; font-weight: bold } /* Keyword.Namespace */
-        .kp { color: #204a87; font-weight: bold } /* Keyword.Pseudo */
-        .kr { color: #204a87; font-weight: bold } /* Keyword.Reserved */
-        .kt { color: #204a87; font-weight: bold } /* Keyword.Type */
-        .ld { color: #000000 } /* Literal.Date */
-        .m { color: #0000cf; font-weight: bold } /* Literal.Number */
-        .s { color: #4e9a06 } /* Literal.String */
-        .na { color: #c4a000 } /* Name.Attribute */
-        .nb { color: #204a87 } /* Name.Builtin */
-        .nc { color: #000000 } /* Name.Class */
-        .no { color: #000000 } /* Name.Constant */
-        .nd { color: #5c35cc; font-weight: bold } /* Name.Decorator */
-        .ni { color: #ce5c00 } /* Name.Entity */
-        .ne { color: #cc0000; font-weight: bold } /* Name.Exception */
-        .nf { color: #000000 } /* Name.Function */
-        .nl { color: #f57900 } /* Name.Label */
-        .nn { color: #000000 } /* Name.Namespace */
-        .nx { color: #000000 } /* Name.Other */
-        .py { color: #000000 } /* Name.Property */
-        .nt { color: #204a87; font-weight: bold } /* Name.Tag */
-        .nv { color: #000000 } /* Name.Variable */
-        .ow { color: #204a87; font-weight: bold } /* Operator.Word */
-        .w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
-        .mf { color: #0000cf; font-weight: bold } /* Literal.Number.Float */
-        .mh { color: #0000cf; font-weight: bold } /* Literal.Number.Hex */
-        .mi { color: #0000cf; font-weight: bold } /* Literal.Number.Integer */
-        .mo { color: #0000cf; font-weight: bold } /* Literal.Number.Oct */
-        .sb { color: #4e9a06 } /* Literal.String.Backtick */
-        .sc { color: #4e9a06 } /* Literal.String.Char */
-        .sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
-        .s2 { color: #4e9a06 } /* Literal.String.Double */
-        .se { color: #4e9a06 } /* Literal.String.Escape */
-        .sh { color: #4e9a06 } /* Literal.String.Heredoc */
-        .si { color: #4e9a06 } /* Literal.String.Interpol */
-        .sx { color: #4e9a06 } /* Literal.String.Other */
-        .sr { color: #4e9a06 } /* Literal.String.Regex */
-        .s1 { color: #4e9a06 } /* Literal.String.Single */
-        .ss { color: #4e9a06 } /* Literal.String.Symbol */
-        .bp { color: #3465a4 } /* Name.Builtin.Pseudo */
-        .vc { color: #000000 } /* Name.Variable.Class */
-        .vg { color: #000000 } /* Name.Variable.Global */
-        .vi { color: #000000 } /* Name.Variable.Instance */
-        .il { color: #0000cf; font-weight: bold } /* Literal.Number.Integer.Long */
+.highlight pre { background-color: #272822; }
+.highlight .hll { background-color: #272822; }
+.highlight .c { color: #75715e } /* Comment */
+/*
+.highlight .err { color: #960050; background-color: #1e0010 }  Error */
+.highlight .k { color: #66d9ef } /* Keyword */
+.highlight .l { color: #ae81ff } /* Literal */
+.highlight .n { color: #f8f8f2 } /* Name */
+.highlight .o { color: #f92672 } /* Operator */
+.highlight .p { color: #f8f8f2 } /* Punctuation */
+.highlight .cm { color: #75715e } /* Comment.Multiline */
+.highlight .cp { color: #75715e } /* Comment.Preproc */
+.highlight .c1 { color: #75715e } /* Comment.Single */
+.highlight .cs { color: #75715e } /* Comment.Special */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .kc { color: #66d9ef } /* Keyword.Constant */
+.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
+.highlight .kn { color: #f92672 } /* Keyword.Namespace */
+.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
+.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
+.highlight .kt { color: #66d9ef } /* Keyword.Type */
+.highlight .ld { color: #e6db74 } /* Literal.Date */
+.highlight .m { color: #ae81ff } /* Literal.Number */
+.highlight .s { color: #e6db74 } /* Literal.String */
+.highlight .na { color: #a6e22e } /* Name.Attribute */
+.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
+.highlight .nc { color: #a6e22e } /* Name.Class */
+.highlight .no { color: #66d9ef } /* Name.Constant */
+.highlight .nd { color: #a6e22e } /* Name.Decorator */
+.highlight .ni { color: #f8f8f2 } /* Name.Entity */
+.highlight .ne { color: #a6e22e } /* Name.Exception */
+.highlight .nf { color: #a6e22e } /* Name.Function */
+.highlight .nl { color: #f8f8f2 } /* Name.Label */
+.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
+.highlight .nx { color: #a6e22e } /* Name.Other */
+.highlight .py { color: #f8f8f2 } /* Name.Property */
+.highlight .nt { color: #f92672 } /* Name.Tag */
+.highlight .nv { color: #f8f8f2 } /* Name.Variable */
+.highlight .ow { color: #f92672 } /* Operator.Word */
+.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
+.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
+.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
+.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
+.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
+.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
+.highlight .sc { color: #e6db74 } /* Literal.String.Char */
+.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
+.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
+.highlight .se { color: #ae81ff } /* Literal.String.Escape */
+.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
+.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
+.highlight .sx { color: #e6db74 } /* Literal.String.Other */
+.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
+.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
+.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
+.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
+.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
+.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
 
-    }
+.highlight .gh { } /* Generic Heading & Diff Header */
+.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
+.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
+.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
