--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,5 @@
 $brand-color: #4E8EF7;
+$brand-color-secondary: #75a8f9;
 $title-color: #333;
 
 $font-title-family: 'PT Sans', Helvetica, Arial, sans-serif;
