--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,8 +1,9 @@
-.highlight pre { background-color: #272822; }
+.highlight pre { background-color: #272822; border: 0px; color: white;}
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 /*
 .highlight .err { color: #960050; background-color: #1e0010 }  Error */
+.highlight .lineno{ color: white; }
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
 .highlight .n { color: #f8f8f2 } /* Name */
