--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="title-article">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-10">
          <h1>{% if page.wrap_title %}{{ page.wrap_title }}{% else %}{{ page.title }}{% endif %}</h1>
          <div class="info">
             <p>
@@ -15,6 +15,11 @@ layout: default
             </p>
           </div>
       </div>
+      <div class="col-xs-12 col-md-2">
+        <a href="{{ page.repo }}" class="btn btn-primary btn-lg btn-block link-repo" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i> Ver demo
+        </a>
+      </div>
     </div>
   </div>
 </div>
@@ -22,9 +27,14 @@ layout: default
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-      <article class="post-content">
+      <article>
         {{ content }}
       </article>
+      
+      <a href="{{ page.repo }}" class="btn btn-primary btn-lg link-repo" target="_blank">
+        <i class="fa fa-github" aria-hidden="true"></i> Ver demo
+      </a>
+      <hr/>
   
       {% if page.comments %}{% include disqus.html %}{% endif %}
    
