--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+
+{% assign author = site.authors[page.author] %}
 <div class="title-article">
   <div class="container">
     <div class="row">
@@ -12,6 +14,7 @@ layout: default
                 <span class="tag">{{ tag }}</span>
               {% endfor %}
               - {{ page.date | date: '%B %d, %Y' }}
+              por <strong>{{ author.name }}</strong>
             </p>
           </div>
       </div>
