--- a/_includes/right.html
+++ b/_includes/right.html
@@ -9,4 +9,16 @@
       </div>
     </div>
   </section>
+  <section class="box">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>Unete a nuestra comunidad</h2>
+        <p>
+          <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1" target="_blank" class="btn btn-primary btn-lg btn-block">
+            <i class="fa fa-slack" aria-hidden="true"></i> ion-book en Slack
+          </a>
+        </p>
+      </div>
+    </div>
+  </section>
 </div>
