--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,6 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='//fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+  
+  <script src="https://use.fontawesome.com/0fb10d4bd2.js"></script>
 </head>
