--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,6 +1,6 @@
 <script src='{{ "/bower_components/jquery/dist/jquery.min.js" | prepend: site.baseurl }}'></script>
 <script src='{{ "/bower_components/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl }}'></script>
-<script type="text/javascript">var switchTo5x=true;</script>
+<!--<script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
 <script>
@@ -17,4 +17,4 @@ ga('send', 'pageview');
 var options={ "publisher": "e54bac27-2ea6-4037-8575-fac40983aed7", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter"]}};
 var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
 </script>
-<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"e940b700cbe988699b03ab77c","lid":"e8641062ff"}) })</script>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"e940b700cbe988699b03ab77c","lid":"e8641062ff"}) })</script>-->
