--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 $brand-color: #4E8EF7;
-$brand-color-secondary: #75a8f9;
+$brand-color-secondary: #2557AA;
 $title-color: #333;
 $box-background-color: #f5f7f9;
 
