--- a/_sass/nav-bar/_nav-bar.scss
+++ b/_sass/nav-bar/_nav-bar.scss
@@ -1,9 +1,12 @@
 .navbar{
   min-height: 10vh;
-  padding: 10px 0px;
   margin-bottom: 0px;
   border-radius: 0px;
+  padding-top: 10px;
   .container{
+    .navbar-header{
+      margin-bottom: 10px;
+    }
     .navbar-brand{
       padding: 0px;
       margin-left: 0px;
@@ -12,10 +15,29 @@
       }
     }
   }
+  
   .navbar-collapse{
+    background-color: $brand-color-secondary;
+    padding: 5px 0px;
     .col-xs-12{
       padding: 0px;
     }
+    a{
+      font-size: 18px;
+      text-shadow: 0px 0px 1px rgba(0, 0, 0, .5);
+    }
+    a.active{
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  }
+  h1{
+    font-weight: bold;
+    margin-top: 0px;
+  }
+  h4{
+    margin-bottom: 20px;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, .5);
   }
   &.navbar-default {
     background-color: $brand-color;
