--- a/_includes/article_home.html
+++ b/_includes/article_home.html
@@ -1,19 +1,28 @@
 {% assign author = site.authors[post.author] %}
 <article class="article-home">
+  <div class="cover-crop">
+    <a href="{{ post.url | prepend: site.baseurl }}">
+      <img src="{{ post.cover }}" class="img-responsive" alt="{{ post.title }}"/>
+    </a>
+  </div>
   <h1>
     <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
   </h1>
   <div class="info">
-    <p>
-      {% for tag in post.tags %}
-        <span class="tag">{{ tag }}</span>
-      {% endfor %}
-      - {{ post.date | date: '%B %d, %Y' }}
+    <small>{{ post.date | date: '%B %d, %Y' }}
       por <a href="{{ author.website }}" target="_blank"><strong>{{ author.name }}</strong></a>
-    </p>
+    </small>
+  </div>
+  <div class="tags">
+    {% for tag in post.tags %}
+      <span class="tag">{{ tag }}</span>
+    {% endfor %}
   </div>
   <p class="summary">
-    {{ post.content | strip_html | truncate: 200  }}
+    {{ post.content | strip_html | truncate: include.trucate  }}
   </p>
-  <a class="btn btn-primary" href="{{ post.url | prepend: site.baseurl }}">Leer más...</a>
+  
+  <div class="more">
+    <a class="btn btn-primary" href="{{ post.url | prepend: site.baseurl }}">Leer más...</a>
+  </div>
 </article>
