--- a/_sass/articles/_articles-large.scss
+++ b/_sass/articles/_articles-large.scss
@@ -3,4 +3,16 @@
   .link-repo{
     margin-top: 20px;
   }
+  
+  .article-home{
+    h1{
+      margin-top: 10px;
+      font-size: 25px;
+      height: 30px;
+      overflow: hidden
+    }
+    .cover-crop{
+      height: 90px;
+    }
+  }
 }
