--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ "/"  | prepend: site.baseurl }}">
-            <img src="/images/ion-book-wh.png"Carlos Rojas")" alt="">
+            <img src="/images/ion-book-wh.png" alt="logo">
           </a>
       </div>
     </div>
