--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,23 +2,20 @@
   <section class="box">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Compra: ion-book</h2>
-        <a href="{{site.bookurl}}" target="_blank" >
-          <img src="http://i.imgur.com/cfKvAxi.jpg" class="img-responsive">
+        <a href="http://j.mp/1Us5Y5B" target="_blank">
+          <img src="http://i.imgur.com/cfKvAxi.jpg" alt="">
+        </a>
+        <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mobiles aprendes. </p>
+        <a href="http://j.mp/1Us5Y5B" target="_blank" class="btn btn-success btn-lg btn-block">
+          Comprar
         </a>
       </div>
     </div>
   </section>
-  <section class="box">
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Unete a nuestra comunidad</h2>
-        <p>
-          <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1" target="_blank" class="btn btn-primary btn-lg btn-block">
-            <i class="fa fa-slack" aria-hidden="true"></i> ion-book en Slack
-          </a>
-        </p>
-      </div>
-    </div>
-  </section>
+</div>
+<div class="col-xs-12 col-md-3">
+  <h4 class="title">Siguenos en:</h4>
+  <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1" target="_blank" class="btn btn-default">
+    <i class="fa fa-slack" aria-hidden="true"></i>
+  </a>
 </div>
