--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 $brand-color: #4E8EF7;
 $brand-color-secondary: #2557AA;
 $title-color: #333;
-$box-background-color: #f5f7f9;
+$box-background-color: #6E6891;
 
 $font-title-family: 'PT Sans', Helvetica, Arial, sans-serif;
 $font-text-family: 'Open Sans', Helvetica, Arial, sans-serif;
