--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,6 +2,7 @@ $brand-color: #4E8EF7;
 $brand-color-secondary: #2557AA;
 $title-color: #333;
 $box-background-color: #6E6891;
+$footer-background-color: #422AC4;
 
 $font-title-family: 'PT Sans', Helvetica, Arial, sans-serif;
 $font-text-family: 'Open Sans', Helvetica, Arial, sans-serif;
