--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,7 +7,7 @@ layout: default
       <div class="row">
         {% for post in site.categories[page.category] %}
           {% if post.cover %}
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-sm-6">
             {% include article_home.html trucate="90" %}
           </div>
           {% endif %}
