--- a/_includes/right.html
+++ b/_includes/right.html
@@ -13,10 +13,27 @@
       </div>
     </div>
   </section>
+  <section class="box">
+    <div class="row">
+      <div class="col-xs-12">
+        <a href="{{ site.courses-url }}" target="_blank">
+          <img src="images/ion-book-wh.png" alt="logo">
+        </a>
+        <p>Aprende con cursos más específicos con videos online. </p>
+        <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
+          Ver cursos
+        </a>
+      </div>
+    </div>
+  </section>
+  
   <h4 class="title">Siguenos en:</h4>
+  <p>
   {% for social in site.social_links %}
     <a href="{{ social.url }}" target="_blank" class="btn btn-default">
       <i class="fa {{ social.icon }}" aria-hidden="true"></i>
     </a>
   {% endfor %}
+  </p>
+  
 </div>
