--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -23,6 +23,11 @@ body {
     width: 50%;
     margin: 0 auto;
   }
+  a.btn{
+    width: 90%;
+    margin: 0 auto;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3)
+  }
 }
 .title{
   font-weight: bold;
