--- a/_includes/right.html
+++ b/_includes/right.html
@@ -4,7 +4,7 @@
       <div class="col-xs-12">
         <a href="{{ site.book-url }}" target="_blank">
           <img src="{{ site.book-img }}" alt="logo" class="hidden-sm">
-          <img src="images/ion-book-wh.png" alt="logo" class="visible-sm">
+          <img src="/images/ion-book-wh.png" alt="logo" class="visible-sm">
         </a>
         <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mientras aprendes. </p>
         <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-xs-12">
         <a href="{{ site.courses-url }}" target="_blank">
-          <img src="images/ion-book-wh.png" alt="logo">
+          <img src="/images/ion-book-wh.png" alt="logo">
         </a>
         <p>Aprende con cursos más específicos con videos online. </p>
         <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
