--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-xs-12 col-sm-3 hidden-xs">
         <a href="{{ site.book-url }}" target="_blank">
           <img src="{{ site.book-img }}" alt="logo" class="hidden-xs book-img">
-          <img src="images/ion-book-wh.png" alt="logo" class="visible-xs logo">
+          <img src="/images/ion-book-wh.png" alt="logo" class="visible-xs logo">
         </a>
       </div>
       <div class="col-xs-12 col-sm-6">
