--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,6 +1,6 @@
 <script src='{{ "/bower_components/jquery/dist/jquery.min.js" | prepend: site.baseurl }}'></script>
 <script src='{{ "/bower_components/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl }}'></script>
-<!--<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
 <script>
@@ -26,5 +26,3 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TZPM4Z');</script>
-
--->
