--- a/_sass/articles/_articles.scss
+++ b/_sass/articles/_articles.scss
@@ -49,15 +49,13 @@
     font-family: $font-title-family;
   }
 }
-.title-article{
-  /*background: $brand-color-secondary;*/
-  h1{
-    font-size: 40px;
-    line-height: 40px;
-    font-family: $font-title-family;
-    color: $title-color;
-    font-weight: bold;
-  }
+
+h1.title-article{
+  font-size: 40px;
+  line-height: 40px;
+  font-family: $font-title-family;
+  color: $title-color;
+  font-weight: bold;
 }
 .tag{
   background-color: #eee;
@@ -76,6 +74,17 @@
   border-color: $brand-color;
   border-radius: 0px;
   font-family: $font-title-family;
+}
+.author{
+  margin-top: 10px;
+  .avatar{
+    padding-right: 0px;
+  }
+}
+.article-detail{
+  .tags{
+    margin-bottom: 10px;
+  }
 }
 @import
 "articles-small",
