--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,16 @@ layout: default
 ---
 <div class="container">
   <div class="row">
+    
+  </div>
+  <div class="row">
     <div class="col-xs-12 col-md-9">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <h1 class="title">{{ page.title }}</h1>
+          {{ content }}
+        </div>
+      </div>
       <div class="row">
         {% for post in site.categories[page.category] %}
           {% if post.cover %}
