--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -31,6 +31,7 @@ body {
 }
 .title{
   font-weight: bold;
+  text-transform: capitalize;
 }
 #footer{
   background-color: $footer-background-color;
