--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
           <img src="{{ author.avatar }}" class="img-responsive" alt="photo">
         </div>
         <div class="col-xs-10 col-sm-11 col-md-12">
-          <p>Por <a href="{{ author.website }}" target="_blank"><strong>{{ author.name }}</strong></a> 
+          <p>Por <a href="{{ author.url }}"><strong>{{ author.name }}</strong></a> 
         - {{ page.date | date: '%B %d, %Y' }}</p>
         </div>
       </div>
