--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -33,6 +33,9 @@ body {
   font-weight: bold;
   text-transform: capitalize;
 }
+.img-author{
+  margin-top: 20px;
+}
 #footer{
   background-color: $footer-background-color;
   color: white;
