--- a/_includes/article_home.html
+++ b/_includes/article_home.html
@@ -1,3 +1,4 @@
+{% if post.cover %}
 {% assign author = site.authors[post.author] %}
 <article class="article-home">
   <div class="cover-crop">
@@ -10,7 +11,7 @@
   </h1>
   <div class="info">
     <small>{{ post.date | date: '%B %d, %Y' }}
-      por <a href="{{ author.website }}" target="_blank"><strong>{{ author.name }}</strong></a>
+      por <a href="{{ author.url }}"><strong>{{ author.name }}</strong></a>
     </small>
   </div>
   <div class="tags">
@@ -26,3 +27,4 @@
     <a class="btn btn-primary" href="{{ post.url | prepend: site.baseurl }}">Leer más...</a>
   </div>
 </article>
+{% endif %}
