--- a/_sass/articles/_articles-medium.scss
+++ b/_sass/articles/_articles-medium.scss
@@ -3,8 +3,14 @@
     margin-bottom: 10px;
   }
   .article-home{
+    h1{
+      margin-top: 10px;
+      font-size: 25px;
+      height: 30px;
+      overflow: hidden
+    }
     .cover-crop{
-      height: 110px;
+      height: 90px;
     }
   }
 }
