--- a/_includes/right.html
+++ b/_includes/right.html
@@ -11,7 +11,7 @@
             Comprar
           </a>
         </section>
-    </div>
+    </div>git push
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
          <a href="{{ site.courses-url }}" target="_blank">
