--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
       <div class="row">
           <div class="col-xs-12">
             <h1>Todo sobre IONIC en español</h1>
-            <h4>Tips, noticias, tutoriales, buenas practicas</h4>
+            <h4>Tips, noticias, tutoriales, demos, actulizaciones, buenas practicas...</h4>
           </div>
       </div>
     </div>
