disabled book button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
       <div class="col-xs-12 col-sm-6">
         <h1>ION-BOOK</h1>
         <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mientras aprendes. </p>
-        <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg">
-          Comprar
+        <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg disabled">
+          Muy pronto
         </a>
       </div>
       <div class="col-xs-12 col-sm-3">
