--- a/_includes/right.html
+++ b/_includes/right.html
@@ -7,8 +7,8 @@
             <img src="/images/ion-book-wh.png" alt="logo" class="visible-sm">
           </a>
           <p>Aprende ionic1 & ionic2 y construye increibles aplicaciones mientras aprendes. </p>
-          <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
-            Comprar
+          <a href="{{ site.book-url }}" target="_blank" class="btn btn-success btn-lg btn-block disabled">
+            Muy pronto
           </a>
         </section>
     </div>
