--- a/_includes/right.html
+++ b/_includes/right.html
@@ -23,6 +23,17 @@
           </a>
         </section>
     </div>
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+         <a href="http://www.youtube.com/watch?v=RmB4LxVlspY" target="_blank">
+            <img src="/images/ion-book-wh.png" alt="logo">
+          </a>
+          <p>No te pierdas mañana nuestro Hangout. </p>
+          <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
+             <i class="fa-youtube-play" aria-hidden="true"></i> Hangout
+          </a>
+        </section>
+    </div>
   </div>
  <div class="row">
    <div class="col-xs-12">
