--- a/_includes/right.html
+++ b/_includes/right.html
@@ -30,7 +30,7 @@
           </a>
           <p>No te pierdas mañana nuestro Hangout. </p>
           <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
-             <i class="fa-youtube-play" aria-hidden="true"></i> Hangout
+             <i class="fa fa-youtube-play" aria-hidden="true"></i> Hangout
           </a>
         </section>
     </div>
