--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,6 +2,14 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
+          <p>No te pierdas mañana nuestro Hangout. </p>
+          <a href="http://www.youtube.com/watch?v=RmB4LxVlspY" target="_blank" class="btn btn-success btn-lg btn-block">
+             <i class="fa fa-youtube-play" aria-hidden="true"></i> Hangout
+          </a>
+        </section>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
           <a href="{{ site.book-url }}" target="_blank">
             <img src="{{ site.book-img }}" alt="logo" class="hidden-sm">
             <img src="/images/ion-book-wh.png" alt="logo" class="visible-sm">
@@ -20,17 +28,6 @@
           <p>Aprende con cursos más específicos con videos online. </p>
           <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
             Ver cursos
-          </a>
-        </section>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-         <a href="http://www.youtube.com/watch?v=RmB4LxVlspY" target="_blank">
-            <img src="/images/ion-book-wh.png" alt="logo">
-          </a>
-          <p>No te pierdas mañana nuestro Hangout. </p>
-          <a href="{{ site.courses-url }}" target="_blank" class="btn btn-success btn-lg btn-block">
-             <i class="fa fa-youtube-play" aria-hidden="true"></i> Hangout
           </a>
         </section>
     </div>
