--- a/_includes/right.html
+++ b/_includes/right.html
@@ -1,6 +1,18 @@
 <div class="col-xs-12 col-md-3">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- IonBookBlog -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-8943241156434100"
+          data-ad-slot="7344056075"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="{{ site.book-url }}" target="_blank">
             <img src="{{ site.book-img }}" alt="logo" class="hidden-sm">
