--- a/_includes/right.html
+++ b/_includes/right.html
@@ -31,18 +31,6 @@
           </a>
         </section>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-12">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- IonBookBlog -->
-      <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8943241156434100"
-          data-ad-slot="7344056075"
-          data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
   </div>
  <div class="row">
    <div class="col-xs-12">
@@ -55,5 +43,17 @@
       {% endfor %}
       </p>
    </div>
+   <div class="col-xs-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- IonBookBlog -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-8943241156434100"
+          data-ad-slot="7344056075"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
  </div>
 </div>
