--- a/_includes/right.html
+++ b/_includes/right.html
@@ -1,15 +1,19 @@
 <div class="col-xs-12 col-md-3">
   <div class="row">
-    <!--
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
-          <p>No te pierdas mañana nuestro Hangout. </p>
-          <a href="http://www.youtube.com/watch?v=RmB4LxVlspY" target="_blank" class="btn btn-success btn-lg btn-block">
-             <i class="fa fa-youtube-play" aria-hidden="true"></i> Hangout
-          </a>
-        </section>
+    
+    <div class="col-xs-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- IonBookBlog -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-8943241156434100"
+          data-ad-slot="7344056075"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
-    -->
+
      <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="{{ site.book-url }}" target="_blank">
@@ -24,17 +28,6 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
-          <a href="https://gumroad.com/carlosrojas_o}" target="_blank">
-            <img src="http://i.cubeupload.com/Mco21D.png" alt="logo">
-          </a>
-          <p>Aca podras encontrar algunos productos para tus proyectos.</p>
-          <a href="https://gumroad.com/carlosrojas_o" target="_blank" class="btn btn-success btn-lg btn-block">
-            Ver Productos
-          </a>
-        </section>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-12">
-       <section class="box">
          <a href="{{ site.courses-url }}" target="_blank">
             <img src="/images/ion-book-wh.png" alt="logo">
           </a>
@@ -44,6 +37,28 @@
           </a>
         </section>
     </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+          <p>Sigue nuestro canal de Youtube. </p>
+          <a href="http://j.mp/2bvg8ow" target="_blank" class="btn btn-success btn-lg btn-block">
+             <i class="fa fa-youtube-play" aria-hidden="true"></i> Startupers
+          </a>
+        </section>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+          <a href="https://gumroad.com/carlosrojas_o}" target="_blank">
+            <img src="http://i.cubeupload.com/Mco21D.png" alt="logo">
+          </a>
+          <p>Aca podras encontrar algunos productos para tus proyectos.</p>
+          <a href="https://gumroad.com/a/672609395 " target="_blank" class="btn btn-success btn-lg btn-block">
+            Ver Productos
+          </a>
+        </section>
+    </div>
+
   </div>
  <div class="row">
    <div class="col-xs-12">
@@ -56,17 +71,6 @@
       {% endfor %}
       </p>
    </div>
-   <div class="col-xs-12">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- IonBookBlog -->
-      <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8943241156434100"
-          data-ad-slot="7344056075"
-          data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
+   
  </div>
 </div>
