--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,13 @@
   <link href='//fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
   
+  <!-- Metas facebook -->
+  <meta property="og:url"                content="{% if page.url %}{{ page.url }}{% else %}{{ site.url }}{% endif %}" />
+  <meta property="og:type"               content="article" />
+  <meta property="og:title"              content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta property="og:description"        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+  <meta property="og:image"              content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
+
   <script src="https://use.fontawesome.com/0fb10d4bd2.js"></script>
   <!-- social share-->
   <script src="//load.sumome.com/" data-sumo-site-id="573a8f4fa849b2d4c4da69cbb73a95092806107954ecdd7fddd49261a23fd6bb" async="async"></script>
