--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,11 +16,12 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
   
   <!-- Metas facebook -->
-  <meta property="og:url"                content="{% if page.url %}{{ page.url }}{% else %}{{ site.url }}{% endif %}" />
+  <meta property="og:url"                content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta property="og:description"        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   <meta property="og:image"              content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
+  <meta property="og:site_name"          content="ion-book" />
 
   <script src="https://use.fontawesome.com/0fb10d4bd2.js"></script>
   <!-- social share-->
