--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,22 @@ layout: default
             <i class="fa fa-github" aria-hidden="true"></i> Ver demo
           </a>
         </p>
+        <div class="remember-demo">
+          <h4><strong>Recuerda:</strong></h4>
+          <p>Si quieres ejecutar este demo un tu computadora, debes tener el <a target="_blank" href="http://ionicframework.com/docs/v2/getting-started/installation/">entorno</a> de ionic instalado y luego de descargar o clonar el proyecto debes ubicarte en tu proyecto en la terminal y luego ejecutar</p>
+          <div class="highlighter-rouge">
+            <pre class="highlight"><code>npm install</code></pre>
+          </div>
+          <p>Y luego</p>
+          <div class="highlighter-rouge">
+            <pre class="highlight"><code>ionic state restore</code></pre>
+          </div>
+          <p>esto es para descargar todas las dependencias del proyecto.</p>
+        </div>
         {% endif %}
       </article>
       <article>
+        <hr/>
         <p>¿Quieres saber más? suscribete a nuestro Newsletter o únete a nuestro canal en <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1">Slack</a> y mantente atento.
         Espero sea de utilidad y sigan Programando :)</p>
         <p>Por: <a href="{{ author.url }}"><strong>{{ author.name }}</strong></a></p>
