add banner my course

--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
-          <a href="{{ site.book-url }}" target="_blank">
+          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank">
            <img src="/images/ion-book-wh.png" alt="logo">
           </a>
-          <p>¿Estas en Bogotá?, tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
-          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block disabled">
+          <p>¿Estas en Bogotá? tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
+          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block">
             Registrate
           </a>
         </section>
