--- a/_includes/right.html
+++ b/_includes/right.html
@@ -7,7 +7,7 @@
           </a>
           <p>¿Estas en Bogotá? tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
           <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block">
-            Registrate
+            Regístrate
           </a>
         </section>
     </div>
